--- a/src/base.scss
+++ b/src/base.scss
@@ -14,11 +14,11 @@ body {
 	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
 	line-height: 1.5;
+	// avoid scrollbar adding width
+	// margin-right: 17px;
+	// overflow-y: overlay;
+ 
 }
-// .app {
-// 	min-height: 100%;
-// }
-
 a {
 	text-decoration: none;
 	color: inherit;
