--- a/src/components/single-item-page-styles.scss
+++ b/src/components/single-item-page-styles.scss
@@ -58,7 +58,7 @@
 
 	img[src*="Planets"] {
 		clip-path: circle(45%);
-		max-height: calc(min(29vh, 400px));
+		max-height: calc(min(24.5vh, 400px));
 		object-fit: contain;
 	}
 
@@ -105,6 +105,9 @@
 			clip-path: circle(29vw);
 			margin-bottom: 1rem;
 		}
+		img[src*="Starships"] {
+			max-height: calc(min(23vh, 600px));
+		}
 
 		img[src*="Yavin4"] {
 			max-height: 35vh;
@@ -148,88 +151,6 @@
 			}
 		}
 	}
-}
-
-.cutoff-text {
-	--max-lines: 6;
-	--line-height: 1.5;
-	// display: -webkit-box;
-	// -webkit-box-orient: vertical;
-	// -webkit-line-clamp: var(--max-lines);
-	max-height: calc(var(--max-lines) * 1.9rem * var(--line-height) );
-	line-height: var(--line-height);
-	overflow: hidden;
-	position: relative;
-	
-	&::before {
-		--line-height: 1.5;
-		content: "";
-		position: absolute;
-		height: calc(1.9rem * var(--line-height) );
-		width: 100%;
-		bottom: 0;
-		pointer-events: none;
-		background: linear-gradient(to bottom, transparent, rgb(33,37,41));
-	}
-}
-
-// padding-left: calc(var(--bs-gutter-x) * 0.5);
-.expand-btn {
-	appearance: none;
-	border: 1.5px solid #999;
-	border-radius: 5px;
-	padding: 0.8rem 0.4rem;
-	cursor: pointer;
-	margin-top: 0.5rem;
-	width: 100px;
-	position: relative;
-	font-size: 0.75rem;
-}
-
-.expand-btn::before {
-	color: #999;
-	content: "View more";
-	white-space: pre;
-	position: absolute;
-	top: 13%;
-	right: 13%;
-}
-
-.expand-btn:checked::before { 
-	color: #999;
-	content: "Collapse";
-	white-space: pre;
-	position: absolute;
-	top: 12%;
-	left: 20%;
-}
-
-.cutoff-text:has( + .expand-btn:checked) {
-	// -webkit-line-clamp: 20;
-	max-height: none;
-	&::before {
-		height: 0;
-	}
-}
-
-
-@media (min-width: 576px) {
-	.expand-btn {
-		margin-block-start: 1rem; 
-	}
-	.cutoff-text::before {
-		display: none;
-	}
-}
-
-@media (max-width: 575px) {
-	.cutoff-text {
-    --max-lines: 3;
-	
-	}
-	// .cutoff-text {
-	// 	-webkit-line-clamp: 3;
-	// }
 }
 
 
