add box-shadow to card & fix nav width on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -78,6 +78,9 @@
 /* Media queries */
 
 @media (max-width: 576px) {
+	.navbar-container {
+		width: calc(min(94vw, 1200px));
+	}
 	.nav {
 		flex-wrap: nowrap;
 	}
