--- a/src/components/single-item-page-styles.scss
+++ b/src/components/single-item-page-styles.scss
@@ -6,6 +6,9 @@
 	overflow: hidden;
 	flex-direction: column;
 	margin-block: 1rem;
+	box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
+
+	
 
 	.page-description-container {
 		background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
