--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,8 @@
 	margin-inline: auto;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-	gap: 1.7rem;
+	gap: 1.8rem;
+	padding: 0.5rem;
 }
 
 .grid-element-card {
@@ -13,6 +14,8 @@
 	border-radius: 15px;
 	overflow: hidden;
 	max-height: calc(min(375px, 45vh));
+	box-shadow: 0px 0px 8px 1px rgba(231, 203, 209, 0.45);
+	
 }
 
 .grid-card-hero {
