--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,6 +33,8 @@
 	box-shadow: none;
 }
 
+
+
 .logIn-div {
 	color: #999;
 	font-weight: 600;
@@ -74,6 +76,24 @@
 	line-height: 2.5rem;
 	white-space: nowrap;
 }
+
+/* navbar animation*/
+.navbar-box {
+	line-height: 2.5rem;
+	white-space: nowrap;
+    transition: max-height 350ms ease-in-out;
+	
+	
+	&.hide {
+		max-height: 0;
+		overflow: hidden;
+	}
+	&.show {
+		overflow: hidden;
+		max-height: 102px;
+	}
+}
+/* ---- */ 
 
 /* Media queries */
 
@@ -126,6 +146,11 @@
 
 @media (min-width: 768px) {
 	.navbar-collapse-box {
+		margin-inline-start: auto;
+		grid-row: 1 / 2;
+		grid-column: 3 / 4;
+	}
+	.navbar-box {
 		margin-inline-start: auto;
 		grid-row: 1 / 2;
 		grid-column: 3 / 4;
