--- a/src/components/Header/ToggleMenuBtn/toggle-btn.scss
+++ b/src/components/Header/ToggleMenuBtn/toggle-btn.scss
@@ -17,7 +17,8 @@
 .navbar-box {
 	line-height: 2.5rem;
     overflow: hidden;
-    transition: max-height 350ms ease-in-out;
+    white-space: nowrap;
+    transition: max-height 275ms ease-in-out;
     
     &:is(.expanded, .collapsed.hide,.collapsed.show) {
         @media (min-width: 768px) {         
@@ -25,13 +26,20 @@
         }
     }
 	
-	@media (max-width: 768px) {
+	@media (max-width: 767px) {
         &:is(.expanded, .collapsed.hide) {
             max-height: 0;
         }
 		&.collapsed.show {
-			max-height: 102;
+			max-height: 102px;
+		}
+        &.collapsed.show.loggedin {
+			max-height: 22px;
 		}
 	}
-
+    
 }
+
+
+
+
