toggle LoginNav when open login form

--- a/src/components/Header/ToggleMenuBtn/toggle-btn.scss
+++ b/src/components/Header/ToggleMenuBtn/toggle-btn.scss
@@ -1,4 +1,4 @@
-.navbar-toggle-btn-NEW {
+.navbar-toggle-btn {
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 5px;
