--- a/src/components/Header/SearchIcon/SearchIcon.scss
+++ b/src/components/Header/SearchIcon/SearchIcon.scss
@@ -1,21 +1,20 @@
 .search-icon-btn {
-  padding: 6px 17px;
+  // padding: 6px 17px;
   background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  max-height: 40px;
-  max-width: 56px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  height: 35px;
+  width: 45px;
   border-radius: 0.375rem;
   &:hover {
     background-color: #424649;
   }
 }
 
-@media (max-width: 576px) {
-  .search-icon-btn {
-    padding: 4.6px 12.4px;
-    border-width: 1px;
-  }
-}
+// @media (max-width: 576px) {
+//   .search-icon-btn {
+//     padding: 4.6px 12.4px;
+//   }
+// }
 
 @media (min-width: 768px) {
   .search-icon-btn {
