--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,6 @@
 	overflow: hidden;
 	max-height: calc(min(375px, 45vh));
 	box-shadow: 0px 0px 8px 1px rgba(231, 203, 209, 0.45);
-	
 }
 
 .grid-card-hero {
@@ -96,8 +95,8 @@
 	margin-block: 0.5rem;
 	font-size: 0.75rem;
 	&:hover {
-	color: rgb(183, 104, 121);
-	cursor: pointer;
+		color: rgb(183, 104, 121);
+		cursor: pointer;
 	}
 }
 
@@ -124,8 +123,6 @@
 	flex-direction: column;
 	margin-block: 1rem;
 	box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
-
-	
 
 	.page-description-container {
 		background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
@@ -294,7 +291,7 @@
 			--line-height: 1.5;
 			content: "";
 			position: absolute;
-			height: calc(1.9rem * var(--line-height) );
+			height: calc(1.9rem * var(--line-height));
 			width: 100%;
 			bottom: 0;
 			pointer-events: none;
@@ -303,10 +300,9 @@
 	}
 }
 
-// padding-left: calc(var(--bs-gutter-x) * 0.5);
 .expand-btn {
 	appearance: none;
-	border: 1.5px solid #999;
+	border: 1.5px solid rgb(111, 115, 128);
 	border-radius: 5px;
 	padding: 0.8rem 0.4rem;
 	cursor: pointer;
@@ -317,19 +313,15 @@
 }
 
 .expand-btn::before {
-	color: #999;
+	color: rgb(111, 115, 128);
 	content: "View more";
-	white-space: pre;
 	position: absolute;
 	top: 13%;
 	right: 13%;
 }
 
 .expand-btn:checked::before { 
-	color: #999;
 	content: "Collapse";
-	white-space: pre;
-	position: absolute;
 	top: 12%;
 	left: 20%;
 }
@@ -342,13 +334,9 @@
 	}
 }
 
-
-
-
 @media (max-width: 575px) {
 	.cutoff-text {
     --max-lines: 3;
-	
 	}
 	.main:has(img[src*="Films"]) {
 		.cutoff-text {
@@ -379,3 +367,119 @@
 
 
 //////// end of View more functionallity /////////////////
+
+//////// Forms styles /////////////////
+
+.loginForm-container {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right:0;
+	background-color: rgba(255, 255, 255, 0.7);
+	backdrop-filter: blur(2px);
+	display: none;
+	align-items: center;
+	justify-content: center;
+
+	.form-inner {
+		background-color: #181818;
+		letter-spacing: 0.06em;
+		width: calc(min(540px, 85vw));
+		font-size: 14px;
+		color: #edd700;
+		.form-title {
+			font-size: 1.5rem;
+		}
+		input {
+			font-size: 13.5px;
+			letter-spacing: 0.06rem;
+			width: 90%;
+			padding: 0.7rem;
+			border-radius: 5px;
+			border: none;
+			outline: none;
+
+			&:focus {
+				border: 2px solid #edd700;
+				background-color: #484848;
+				color: #edd700;
+			}
+		}
+
+		input[type='submit'] {
+			display: block;
+			width: 90%;
+			margin: 1.3rem auto;
+			padding: 0.6rem;
+			border: none;
+			border-radius: 5px;
+			font-weight: 500;
+			font-size: 14px;
+			background-color: #484848;
+			color: white;
+			transition: background-color 225ms;
+
+			&:hover {
+				background-color: #3f6dac;
+			}
+		}
+
+		&:last-child {
+			a[href='/loginform']:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+
+	@media (max-width: 576px) {
+		& {
+			width: 100%;
+			position: absolute;
+			top: 0;
+			//avoid mobile keyword partially hiding the form
+			min-height: calc(max(700px, 100vh));
+		}
+		& form {
+			width: 100%;
+			height: 100%;
+		}
+		.form-inner {
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+.loginForm-container.is-open {
+	display: flex;
+}
+
+.form-close-btn {
+	right: 1.5rem;
+	border: 0;
+	background-color: transparent;
+	font-size: 2rem;
+	color: white;
+	transition: color 225ms;
+
+	&:hover {
+		color: #3f6dac;
+	}
+}
+
+.sign-up-link {
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 1rem;
+	padding: 0.5rem;
+	border: 0;
+	border-radius: 5px;
+	transition: border 225ms;
+
+	&:hover {
+		border: solid 1px #edd700;
+	}
+}
+
+//////// end of Forms styles /////////////////
