--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -11,19 +11,19 @@
 :is(.spinner-wrapper.small) .ldio-c0fsg7uppru div {
   position: absolute;
   animation: ldio-c0fsg7uppru 1s linear infinite;
-  width: 60px;
-  height: 60px;
-  /* top: 20px;
-  left: 20px; */
+  width: 58px;
+  height: 58px;
+  top: 0px;
+  left: 20px; 
   /* border-radius: 50%; */
   box-shadow: 0 4px 0 0 #3f6dac;
   transform-origin: 30px 30.75px;
 }
 
-:is(.spinner-wrapper.small) .loadingio-spinner-eclipse-3z3n0w49pdf {
-  width: 100px;
-  height: 100px;
-}
+// :is(.spinner-wrapper.small) .loadingio-spinner-eclipse-3z3n0w49pdf {
+//   width: 100px;
+//   height: 100px;
+// }
 
 @keyframes ldio-c0fsg7uppru {
   0% {
