--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -8,6 +8,7 @@
 	    font-size: 0.8em;
 	    font-weight: 800;
 	    color: #999;
+		padding-block: 0.5rem;
     }
 
     .login-nav-link:hover {
@@ -25,10 +26,10 @@
             max-height: 0;
         }
 		&.collapsed.show {
-			max-height: 102px;
+			max-height: 112px;
 		}
         &.collapsed.show.loggedin {
-			max-height: 22px;
+			max-height: 38px;
 		}
 	} 
 }
@@ -40,7 +41,7 @@
 		text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
 		font-weight: 700;
 		letter-spacing: 2px;
-		line-height: 1.375rem;
+		line-height: 1rem;
 	}
 }
 
