--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -2,7 +2,7 @@
 	line-height: 2.5rem;
     overflow: hidden;
     white-space: nowrap;
-    transition: max-height 275ms ease-in-out;
+    transition: max-height 250ms ease-in;
     
     .login-nav-link {
 	    font-size: 0.8em;
@@ -29,7 +29,7 @@
 			max-height: 112px;
 		}
         &.collapsed.show.loggedin {
-			max-height: 38px;
+			max-height: 32px;
 		}
 	} 
 }
