--- a/src/components/Header/ToggleLoginMenuBtn/toggle-btn.scss
+++ b/src/components/Header/ToggleLoginMenuBtn/toggle-btn.scss
@@ -2,6 +2,7 @@
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 5px;
+    order: -1;
     img {
         width: 43px;
         height: 33px;
