--- a/src/components/GridItems.scss
+++ b/src/components/GridItems.scss
@@ -1,14 +1,14 @@
-.grid-container {
-  max-width: calc(min(90vw, 1200px));
+.grid-items {
+  max-width: calc(min(94vw, 1200px));
   margin-inline: auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   gap: 1.8rem;
   padding: 0.5rem;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
 
-.grid-element-card {
+.grid-item {
   display: flex;
   flex-direction: column;
   border-radius: 15px;
@@ -17,11 +17,11 @@
   box-shadow: 0px 0px 8px 1px rgba(231, 203, 209, 0.45);
 }
 
-.grid-card-hero {
+.grid-item__hero {
   height: 60%;
   overflow: hidden;
 
-  .grid-card-hero-img {
+  .grid-item__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -39,7 +39,7 @@
   }
 }
 
-.grid-card-info {
+.grid-item__info {
   height: 40%;
   border-top: 2px solid #9e4f60;
   background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
@@ -63,21 +63,21 @@
 }
 
 @media (max-width: 576px) {
-  .grid-container {
+  .grid-items {
     gap: 1rem;
   }
 
-  .grid-element-card {
+  .grid-item {
     height: 20vh;
     flex-direction: row;
   }
 
-  .grid-card-hero {
+  .grid-item__hero {
     min-height: 100%;
     width: 35%;
   }
 
-  .grid-card-info {
+  .grid-item__info {
     min-height: 100%;
     border-left: 2px solid #9e4f60;
     border-top: none;
