--- a/src/pages/DetailPage.scss
+++ b/src/pages/DetailPage.scss
@@ -1,4 +1,4 @@
-.main {
+.detail-page {
   display: flex;
   margin-inline: auto;
   border-radius: 15px;
@@ -7,7 +7,16 @@
   margin-block: 1rem;
   box-shadow: 0px 0px 9px 2px rgba(231, 203, 209, 0.45);
 
-  .page-description-container {
+  .detail-page__img {
+    display: grid;
+    width: 50%;
+
+    &:has(img[src*="Planets"]) {
+      place-content: center;
+    }
+  }
+
+  .detail-page__info {
     background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
     background-size: 8px;
     background-repeat: repeat-x;
@@ -32,14 +41,6 @@
     }
   }
 
-  .page-img-container {
-    display: grid;
-    width: 50%;
-
-    &:has(img[src*="Planets"]) {
-      place-content: center;
-    }
-  }
 
   img {
     width: 100%;
@@ -70,14 +71,13 @@
 
   @media (max-width: 575px) {
     max-width: calc(min(94vw, 540px));
-    min-height: 72vh;
   }
 
   @media (min-width: 576px) and (max-width: 768px) {
     &:has(img[src*="vignette"], img[src*="Films"]) {
       flex-direction: row;
 
-      .page-description-container {
+      .detail-page__info {
         border-left: 3px solid #9e4f60;
         border-top: none;
       }
@@ -87,17 +87,16 @@
   @media (min-width: 576px) {
     max-width: calc(min(90vw, 758px));
     min-height: calc(min(65vh, 500px));
-    max-height: max-content;
   }
 
   @media (max-width: 768px) {
-    .page-description-container {
+    .detail-page__info {
       border-top: 3px solid #9e4f60;
       border-left: none;
       width: 100%;
     }
 
-    .page-img-container {
+    .detail-page__img {
       width: 100%;
     }
 
@@ -136,75 +135,23 @@
   }
 
   @media (min-width: 992px) {
-    & {
-      margin-block-start: 1.5rem;
-    }
-
     img[src*="Films"] {
-      object-position: center;
-    }
-
-    .expand-btn:hover {
-      background-color: #424649;
-
-      &::before {
-        color: white;
-      }
+      object-position: top;
     }
   }
 }
 
-////////////////// Styles for tablets ////////////////////
 
-@media (min-width: 768px) and (max-width: 992px) and (orientation: portrait) {
-  .grid-element-card {
-    min-height: 30vh;
-  }
 
-  .grid-card-info {
-    h4 {
-      font-size: 1.5rem;
-    }
-  }
-
-  .main {
-    .page-description-container {
-      h1 {
-        font-size: 1.50rem
-      }
-
-      h3 {
-        font-size: 1.25rem;
-      }
-
-      span {
-        font-size: 1rem;
-        display: block;
-        color: #999;
-      }
-    }
-  }
-
-  .list-element,
-  span {
-    font-size: 1rem;
-  }
-}
-
-@media (min-width: 700px)
-
-/*and (orientation: portrait)*/
-  {
-  .main {
+@media (min-width: 700px) {
+  .detail-page {
     flex-direction: row;
 
     &:has(img[src*="Starships"], img[src*="Planets"]) {
-      .page-description-container {
+      .detail-page__info {
         border-left: 3px solid #9e4f60;
         border-top: none;
       }
     }
   }
 }
-
-////////////////// end of Styles for tablets ////////////////////
