--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -1,54 +1,50 @@
-.navbar-box {
-	line-height: 2.5rem;
-    overflow: hidden;
-    white-space: nowrap;
-    transition: max-height 250ms ease-in;
-    
-    .login-nav-link {
-	    font-size: 0.8em;
-	    font-weight: 800;
-	    color: #999;
-		padding-block: 0.5rem;
+.login-nav {
+  line-height: 2.5rem;
+  overflow: hidden;
+  white-space: nowrap;
+  transition: max-height 250ms ease-in;
+
+  &__link {
+    font-size: 0.8em;
+    font-weight: 800;
+    color: #999;
+    padding-block: 0.5rem;
+    &:hover {
+      color: #ccc;
     }
-
-    .login-nav-link:hover {
-        color: #ccc;
+    @media (max-width: 900px) {
+      & {
+        font-size: 0.875em;
+        text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
+        font-weight: 700;
+        letter-spacing: 2px;
+        line-height: 1rem;
+      }
     }
-    
-    &:is(.expanded, .collapsed.hide, .collapsed.show) {
-        @media (min-width: 768px) {         
-            display: flex;
-        }
+  }
+
+  &:is(.expanded, .collapsed.hide, .collapsed.show) {
+    @media (min-width: 768px) {
+      display: flex;
     }
-	
-	@media (max-width: 767px) {
-        &:is(.expanded, .collapsed.hide) {
-            max-height: 0;
-        }
-		&.collapsed.show {
-			max-height: 112px;
-		}
-        &.collapsed.show.loggedin {
-			max-height: 32px;
-		}
-	} 
-}
+  }
 
-
-@media (max-width: 900px) {
-	.login-nav-link {
-		font-size: 0.875em;
-		text-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
-		font-weight: 700;
-		letter-spacing: 2px;
-		line-height: 1rem;
-	}
-}
-
-@media (min-width: 768px) {
-	.navbar-box {
-		margin-inline-start: auto;
-		grid-row: 1 / 2;
-		grid-column: 3 / 4;
-	}
+  @media (max-width: 768px) {
+    &:is(.expanded, .collapsed.hide) {
+      max-height: 0;
+    }
+    &.collapsed.show {
+      max-height: 112px;
+    }
+    &.collapsed.show.loggedin {
+      max-height: 33px;
+    }
+  }
+  @media (min-width: 768px) {
+    & {
+      margin-inline-start: auto;
+      grid-row: 1 / 2;
+      grid-column: 3 / 4;
+    }
+  }
 }
