--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,44 +1,34 @@
-.header {
-	position: relative;
-	@media (min-width: 768px) {
-		min-height: 158.06px;
-	}
-}
-
-.navbar-container {
-	display: grid;
-	width: calc(min(90vw, 1200px));
-	grid-template-columns: 1fr 2fr 1fr;
-	align-items: center;
-	margin: 0 auto;
+.main-header {
+  &__container {
+    display: grid;
+    width: calc(min(90vw, 1200px));
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+    padding-block: 1rem;
+    @media (max-width: 576px) {
+      width: initial;
+      padding-inline: 0.5rem;
+    }
+    @media (min-width: 768px) {
+      & {
+        padding-block: 0.25rem;
+      }
+    }
+  }
+  &__logo {
+    width: 200px;
+  }
 }
 
 /* Media queries */
 @media (max-width: 576px) {
-	.navbar-container {
-		width: calc(min(94vw, 1200px));
-	}
-	.nav {
-		flex-wrap: nowrap;
-	}
+  .nav {
+    flex-wrap: nowrap;
+  }
 
-	.logo-img {
-		width: 180px;
-	}
+  .logo-img {
+    width: 180px;
+  }
 }
-
-@media (max-width: 768px) {
-	.logo-img {
-		width: 200px;
-	}
-}
-.logo-img {
-	width: 220px;
-}
-
-@media (min-width: 768px) {
-	.navbar-brand {
-		grid-column: 2 /3;
-	}
-}
-
