--- a/src/components/Header/SectionNav/SectionNav.scss
+++ b/src/components/Header/SectionNav/SectionNav.scss
@@ -23,6 +23,7 @@
     font-size: 0.8em;
     font-weight: 800;
     color: #999;
+    flex: 1 0;
     padding-block: 0.5rem;
     &:hover {
       color: white;
