--- a/src/components/GridItems/GridItems.scss
+++ b/src/components/GridItems/GridItems.scss
@@ -2,10 +2,10 @@
   max-width: calc(min(94vw, 1200px));
   margin-inline: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+  grid-auto-rows: minmax(275px, 30vh);
   gap: 1.8rem;
   padding: 0.5rem;
-  // min-height: 100vh;
 }
 
 .grid-item {
@@ -13,8 +13,7 @@
   flex-direction: column;
   border-radius: 15px;
   overflow: hidden;
-  max-height: calc(min(375px, 45vh));
-  box-shadow: 0px 0px 8px 1px rgba(231, 203, 209, 0.45);
+  box-shadow: 0px 0px 8px 1px rgba(var(--box-shadow-pink), 0.45);
 }
 
 .grid-item__hero {
@@ -33,42 +32,43 @@
 
     &[src*="vignette"] {
       object-position: (50% 30%);
-
     }
-
   }
 }
 
 .grid-item__info {
   height: 40%;
-  border-top: 2px solid #9e4f60;
+  padding: 1rem;
+  background-color: var(--bg-dark-gray);
+  border-top: 2px solid var(--primary-pink);
   background-image: url(https://static-mh.content.disney.io/starwars/assets/shared/bg_hash_top-dca2c5ab1b2e.png);
   background-size: 7px;
   background-repeat: repeat-x;
 
   h4 {
     font-size: 1.25rem;
-    color: #ddd;
+    color: var(--primary-white);
     transition: color 275ms cubic-bezier(0.075, 0.82, 0.165, 1);
 
     &:hover {
       cursor: pointer;
-      color: #9e4f60;
+      color: var(--primary-pink);
     }
   }
 
   p {
     font-size: 0.9rem;
+    color: var(--gray-blue);
   }
 }
 
 @media (max-width: 576px) {
   .grid-items {
     gap: 1rem;
+    grid-auto-rows: 20vh;
   }
 
   .grid-item {
-    height: 20vh;
     flex-direction: row;
   }
 
@@ -79,7 +79,7 @@
 
   .grid-item__info {
     min-height: 100%;
-    border-left: 2px solid #9e4f60;
+    border-left: 2px solid var(--primary-pink);
     border-top: none;
     width: 65%;
   }
