--- a/src/components/Header/ToggleLoginMenuBtn/ToggleLoginMenuBtn.scss
+++ b/src/components/Header/ToggleLoginMenuBtn/ToggleLoginMenuBtn.scss
@@ -1,7 +1,7 @@
 .toggle-login-menu-btn {
   margin-inline-end: auto;
   background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid var(--gray-blue);
   border-radius: 5px;
   order: -1;
   img {
