--- a/src/components/SearchModal/SearchModal.scss
+++ b/src/components/SearchModal/SearchModal.scss
@@ -1,11 +1,26 @@
 .search-modal {
-  margin: 0 auto;
+  &__form {
+    background-color: #282a2b;
+    color: #edd700;
+  }
+  &__submit-btn {
+    display: block;
+    width: 100%;
+    margin: 1.3rem auto;
+    padding: 0.6rem;
+    border: none;
+    border-radius: 5px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    font-size: 14px;
+    background-color: #484848;
+    color: white;
+    transition: background-color 125ms ease-in-out;
+    &:hover {
+      background-color: #3f6dac;
+    }
+  }
 }
-.modal-form {
-  background-color: #282a2b;
-  color: #edd700;
-}
-
 
 .modal-backdrop.show {
   --bs-backdrop-bg: rgba(255, 255, 255, 0.7);
@@ -17,47 +32,21 @@
   right: 0;
   backdrop-filter: blur(2px);
 }
-.modal-search-btn {
-  display: block;
-  width: 100%;
-  margin: 1.3rem auto;
-  padding: 0.6rem;
-  border: none;
-  border-radius: 5px;
-  font-weight: 500;
-  font-size: 14px;
-  background-color: #484848;
-  color: white;
-  transition: background-color 200ms linear;
-}
-.modal-search-btn:hover {
-  background-color: #3f6dac;
-}
 
-input[name='searchInput'] {
+input[name="searchInput"] {
   font-size: 12px;
-  width: 100%;
   padding: 0.7rem;
   border-radius: 5px;
   border: none;
-  outline: none;
-  margin: auto;
+  letter-spacing: 0.5px;
 }
 
-input[name='searchInput']:focus-visible {
-  border: 2px solid #edd700;
+input[name="searchInput"]:is(:focus, :focus-visible) {
+  outline: 2px solid #edd700;
   background-color: #484848;
   color: #edd700;
-  outline: none;
+  border: none;
   box-shadow: none;
-}
-
-.custom-modal-title {
-  color: #edd700;
-  font-size: 1.5rem;
-  margin-top: 0;
-  font-weight: 500;
-  line-height: 1.2;
 }
 
 .modal-body label {
@@ -69,12 +58,6 @@ input[name='searchInput']:focus-visible {
 }
 .form-label:not(:first-child) {
   margin-left: 0.8rem;
-}
-
-@media (max-width: 576px) {
-  .form-label:not(:first-child) {
-    margin-left: 0.5rem;
-  }
 }
 
 .modal-header .btn-close {
