--- a/src/components/ListOfItemsWrapper/ListOfItemsWrapper.scss
+++ b/src/components/ListOfItemsWrapper/ListOfItemsWrapper.scss
@@ -16,12 +16,14 @@
       width: 100%;
       bottom: 0;
       pointer-events: none;
-      background: linear-gradient(
-        to bottom,
-        transparent,
-        var(--bg-dark-gray) 100%
-      );
+      background: linear-gradient(to bottom,
+          transparent,
+          var(--bg-dark-gray) 100%);
     }
+  }
+
+  h3 {
+    margin-block: 0.5rem;
   }
 }
 
