--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -34,6 +34,10 @@
       margin-block: 0.5rem;
       padding-top: 0.25rem;
 
+      h3 {
+        margin-block: 0.5rem;
+      }
+
       &>* {
         flex: 1 0;
         width: 100%;
