--- a/src/components/Header/LoginNav/LoginNav.scss
+++ b/src/components/Header/LoginNav/LoginNav.scss
@@ -7,11 +7,13 @@
   &__link {
     font-size: 0.8em;
     font-weight: 800;
-    color: #999;
-    padding-block: 0.5rem;
+    color: var(--primary-gray);
+    padding: 0.5rem;
+
     &:hover {
       color: var(--primary-white);
     }
+
     @media (max-width: 900px) {
       & {
         font-size: 0.875em;
@@ -20,6 +22,13 @@
         letter-spacing: 2px;
         line-height: 1rem;
       }
+    }
+
+    &--separator {
+      font-size: 0.8em;
+      font-weight: 800;
+      color: var(--primary-gray);
+      padding: 0.5rem;
     }
   }
 
@@ -33,13 +42,16 @@
     &:is(.expanded, .collapsed.hide) {
       max-height: 0;
     }
+
     &.collapsed.show {
       max-height: 112px;
     }
+
     &.collapsed.show.loggedin {
       max-height: 33px;
     }
   }
+
   @media (min-width: 768px) {
     & {
       margin-inline-start: auto;
