Update styles @DetailPage

--- a/src/components/Header/SectionNav/SectionNav.scss
+++ b/src/components/Header/SectionNav/SectionNav.scss
@@ -24,7 +24,7 @@
     font-weight: 800;
     color: var(--primary-gray);
     flex: 1 0;
-    padding-block: 0.5rem;
+    padding: 0.5rem;
     &:hover {
       color: var(--primary-white);
       cursor: pointer;
