--- a/src/pages/RegisterForm.scss
+++ b/src/pages/RegisterForm.scss
@@ -1,3 +1,5 @@
+@import "../styles/variables.scss";
+
 .register-form {
   position: fixed;
   top: 0;
@@ -21,7 +23,7 @@
     background-color: transparent;
     font-size: 2rem;
     color: white;
-    transition: color 225ms;
+    transition: color 175ms;
   
     &:hover {
       color: #3f6dac;
@@ -34,6 +36,7 @@
   }
   
   &__title {
+    margin-block-end: 1rem;
     font-size: 1.4rem;
   }
 
@@ -50,8 +53,6 @@
     font-size: 14px;
     color: #edd700;
 
-    
-
     input {
       font-size: 13.5px;
       letter-spacing: 0.06rem;
@@ -62,7 +63,7 @@
       outline: none;
 
       &:focus {
-        border: 2px solid #edd700;
+        outline: 2px solid #edd700;
         background-color: #484848;
         color: #edd700;
       }
@@ -79,7 +80,7 @@
       font-size: 0.875rem;
       background-color: #484848;
       color: white;
-      transition: background-color 225ms;
+      transition: background-color 175ms;
 
       &:hover {
         background-color: #3f6dac;
@@ -90,6 +91,35 @@
       a[href='/loginform']:hover {
         text-decoration: underline;
       }
+    }
+  }
+
+  &__input-field {
+    width: 90%;
+    margin-block: 1rem;
+  }
+
+  &__signup-link {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    padding: 0.5rem;
+    border: 0;
+    border-radius: 5px;
+    transition: outline 225ms;
+  
+    &:hover {
+      outline: solid 1px #edd700;
+    }
+  }
+  &__signin-link {
+    margin: 1rem;
+    p {
+      display: inline-block;
+      color: var(--gray-blue);
+    }
+    span {
+      margin-inline: 1rem;
     }
   }
 
@@ -114,16 +144,4 @@
   }
 }
 
-.sign-up-link {
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 1rem;
-  padding: 0.5rem;
-  border: 0;
-  border-radius: 5px;
-  transition: border 225ms;
 
-  &:hover {
-    border: solid 1px #edd700;
-  }
-}
