--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -32,20 +32,30 @@
       flex-wrap: wrap;
       margin-block: 0.5rem;
       padding-top: 0.25rem;
-
-      h3 {
-        margin-block: 0.5rem;
-      }
-
-      &>* {
-        flex: 1 0;
-        width: 100%;
-        max-width: 100%;
-      }
-
-      @media (max-width: 575px) {
-        padding: 0;
-        margin: 0;
+      
+      // &--left {
+        //   margin-inline-end: 1rem;
+        // }
+        
+        h3 {
+          margin-block: 0.5rem;
+        }
+        
+        &>* {
+          flex: 1 0;
+          width: 100%;
+          max-width: 100%;
+        }
+        
+        @media (max-width: 575px) {
+          & {
+            padding: 0;
+            margin: 0;
+          }
+          & > * {
+              margin-inline-end: 1rem;
+          }
+          
       }
     }
 
